configured Firebase crashlytics and analytics; added Firebase Authentication dependencies

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,7 @@
     <string name="hide_completed">Hide completed</string>
     <string name="delete_all_completed">Delete all completed</string>
     <string name="task_deleted">Task deleted</string>
+    <string name="todo_list">ToDo List</string>
+    <string name="sign_in">Sign In</string>
+    <string name="sign_up">Sign Up</string>
 </resources>
